Fix alignment and styling of images

--- a/src/assets/less/pages/globalping/integrations.less
+++ b/src/assets/less/pages/globalping/integrations.less
@@ -54,8 +54,6 @@
 				top: 50%;
 				left: 50%;
 				transform: translate(-50%, -50%);
-				width: 64px;
-				height: 64px;
 			}
 		}
 
